made 404 page simpler

--- a/404.html
+++ b/404.html
@@ -21,16 +21,11 @@
 
             a:hover{background-color: var(--color); color: var(--back);
             outline-color: var(--back); outline-offset: -4px;}
-
-            img{max-width: 200px; outline:solid var(--back) 5px;
-            outline-offset: -10px; border-radius: 1rem;}
         </style></head>
 
     <body style="height:100vh; display: flex">
         <div class="center">
-            <p>this page doesn't exist</p>
-            <img src="/website/images/walking.gif">
-            <p>how did you get here</p><br>
+            <p>this page doesn't exist<br>how did you get here</p>
             <a href="/website/home.html">← back home</a>
         </div>
     </body>
