--- a/404.html
+++ b/404.html
@@ -13,8 +13,7 @@
                 display: flex}
             
             .center{margin:auto auto; display:flex; 
-                flex-direction: column; gap: .5rem;
-                align-items: center;}
+                flex-direction: column; gap: .5rem}
 
             a{outline: 2px solid var(--border); text-decoration: none;
             padding: 4px 8px;}
