--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="/website/assets/404.png">
         <title>404</title><style>
             body{--back: #080808;
                 --text: #f0f0f0;
