--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
     <body style="height:100vh; display: flex">
         <div class="center">
             <p>this page doesn't exist<br>how did you get here</p>
-            <a href="/website/home.html">← back home</a>
+            <a href="/website/home">← back home</a>
         </div>
     </body>
 </html>
