--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </style></head>
 
     <body style="height:100vh; display: flex">
-        <a href="home"><div class='button'>
+        <a href="home" class="button">
             <div style="font-family: 'Work Sans', serif; font-weight: 600">↗</div>
             <div style="font-family: 'Inconsolata', monospace; font-weight: 800">nowhere <s>in<br>particular</s></div>
-        </a></div>
+        </a>
     </body>
 </html>
