--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 margin: auto; transition: all .5s cubic-bezier(.08,.82,.17,1)}
             .button:hover{background-color: #f0f0f010; border-color: #f0f0f0; 
             box-shadow: #202020 .5rem .5rem;}
+            a{text-decoration: none}
             @media only screen and (max-width: 450px) {
                 .button{display: inline; font-size: 14vw; 
                     border-width: 1.5vw; padding: 2vw 5vw 5vw}
@@ -29,7 +30,7 @@
     <body style="height:100vh; display: flex">
         <a href="home" class="button">
             <div style="font-family: 'Work Sans', serif; font-weight: 600">↗</div>
-            <div style="font-family: 'Inconsolata', monospace; font-weight: 800">nowhere <s>in<br>particular</s></div>
+            <div style="font-family: 'Inconsolata', monospace; font-weight: 800">nowhere in<br>particular</div>
         </a>
     </body>
 </html>
