made link list better

--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
                 --color: #f0f0f0;
                 --shadow: #404040;
                 --border: #404040;
+                --details: #f0f0f010;
                 display: flex; padding: 2rem; min-height: auto}
 
             .left-top{padding: 12px 24px; width: 400px;
@@ -22,16 +23,19 @@
             .right-bottom a::before{content: "→"; margin-right: 12px}
             .left-top{width:400px}
 
+            .discord{text-decoration-color: #7580F5}
+            .discord:hover{color: #7580F5}
             .lastfm{text-decoration-color: #ff2020;}
             .lastfm:hover{color: #ff2020}
             .spotify{text-decoration-color: #20ff20;}
             .spotify:hover{color: #20ff20}
             .bandcamp{text-decoration-color: #20a0ff;}
             .bandcamp:hover{color: #20a0ff}
-            .email{text-decoration-color: #808080;}
-            .email:hover{color: #808080}
-            .statuscafe{text-decoration-color: rgb(138, 88, 65);}
-            .statuscafe:hover{color: rgb(138, 88, 65)}
+            .email{text-decoration-color: #a0a0a0;}
+            .email:hover{color: #a0a0a0}
+            .statuscafe{text-decoration-color: #ac6b4c;}
+            .statuscafe:hover{color: #ac6b4c}
+
 
             #statuscafe-username a{display: none}
             #statuscafe{margin: 8px}
@@ -58,17 +62,18 @@
             There's not much here right now, we're pretty much perpetually under construction, so there'll
             (hopefully) be more stuff here soon. If you wanna talk to us, some links are below!
         </p><br>
-        <details class="status"><summary>links</summary>
+        <details><summary>links</summary>
             <ul>
-                <li>discord: cvni81</li>
-                <li><a href="https://www.last.fm/user/cvni81" class="lastfm">last.fm</a></li>
-                <li><a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify">spotify</a></li>
-                <li><a href="https://bandcamp.com/cvni1981" class="bandcamp">bandcamp</a></li>
-                <li>email: <a href="mailto:cvni1981@gmail.com" class="email">cvni1981@gmail.com</a></li>
-                <li><a href="https://status.cafe/users/cvni81" class="statuscafe">status.cafe</a>: <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></li>
+                <li><b>contact: </b>discord (<a class="discord" href="https://discord.com/users/691348576093077535">cvni81</a>) •
+                    email: (<a href="mailto:cvni1981@gmail.com" class="email">cvni1981@gmail.com</a>)</li>
+                <li><b>music we listen to:</b> <a href="https://www.last.fm/user/cvni81" class="lastfm">last.fm</a> •
+                    <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify">spotify</a> •
+                    <a href="https://bandcamp.com/cvni1981" class="bandcamp">bandcamp</a></li>
+                <li><b><a href="https://status.cafe/users/cvni81" class="statuscafe">latest status</a>: </b>
+                    <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script>
+                </li>
             </ul>
-        
-    </div>
+    </details></div>
 
     <div class="right-bottom">
     </div>
