--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 border: .4rem solid var(--border); 
                 width: fit-content; 
                 padding: .5rem 1.5rem 1rem 1rem; 
-                margin: auto; transition: all .5s cubic-bezier(.08,.82,.17,1)}
+                margin: auto;}
             .button:hover{background-color: #f0f0f010; border-color: #f0f0f0; 
             box-shadow: #202020 .5rem .5rem;}
             a{text-decoration: none}
