updated name list

--- a/mante.html
+++ b/mante.html
@@ -24,18 +24,23 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 133 changes</li>
+                    <li><b>kulupu ko:</b> 134 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>the motan:</b> 50 changes</li>
+                    <li><b>the motan:</b> 53 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
                     <li><b>jan Seli:</b> 15 changes</li>
                     <li><b>tabby:</b> 12 changes</li>
+                    <li><b>mu Temi:</b> 2 change</li>
                     <li><b>mute ante:</b> 2 changes</li>
-                    <li><b>mu Temi:</b> 1 change</li>
                 </ul>
                 <p>tan mute ante</p>
         </details>
         <ul id="name list">
+            <li>19/12:<b> logobogo (place for eating worms) </b><span class="name">kulupu ko</span></li><br>
+            <li>7/12:<b> How not to play Uno Chess </b><span class="name">the motan</span></li><br>
+            <li>5/12:<b> How to play Uno Chess </b><span class="name">the motan</span></li><br>
+            <li>5/12:<b> MANYE™ </b><span class="name">the motan</span></li><br>
+            <li>5/12:<b> MANYE </b><span class="name">mu Temi</span></li><br>
             <li>2/12:<b> scalene ambiguous server </b><span class="name">the motan</span></li><br>
             <li>2/12:<b> scalene hate server </b><span class="name">kulupu ko</span></li><br>
             <li>30/11:<b> adhd commune </b><span class="name">kulupu ko</span></li><br>
