--- a/mante.html
+++ b/mante.html
@@ -38,7 +38,7 @@
         <ul id="name list">
             <li>19/12:<b> logobogo (place for eating worms) </b><span class="name">kulupu ko</span></li><br>
             <li>7/12:<b> How not to play Uno Chess </b><span class="name">the motan</span></li><br>
-            <li>5/12:<b> How to play Uno Chess </b><span class="name">the motan</span></li><br>
+            <li>5/12:<b> <a href="https://youtu.be/vzkKs_b5css">How to play Uno Chess</a> </b><span class="name">the motan</span></li><br>
             <li>5/12:<b> MANYE™ </b><span class="name">the motan</span></li><br>
             <li>5/12:<b> MANYE </b><span class="name">mu Temi</span></li><br>
             <li>2/12:<b> scalene ambiguous server </b><span class="name">the motan</span></li><br>
