added up arrow to back to top link

--- a/mante.html
+++ b/mante.html
@@ -16,7 +16,7 @@
         </style></head>
     <body><header>
         <h1>every ma ante server name*</h1></header>
-        <nav><a href="#">back to top</a></nav>
+        <nav><a href="#">↑ back to top</a></nav>
     <div class="main">
         <details id="notes"><summary><b>notes</b></summary>
             <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
