--- a/mante.html
+++ b/mante.html
@@ -16,13 +16,13 @@
         </style></head>
     <body><header>
         <h1>every ma ante server name*</h1></header>
-        <nav><a href="#">↑ back to top</a></nav>
+        <nav><a href="#">back to top</a></nav>
     <div class="main">
         <details id="notes"><summary><b>notes</b></summary>
             <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
                 Also this is accurate to [as long as i can keep updating this]<br>
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
-                (name changer) leaderboard:
+                (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 134 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
