made summary not change size when its open yipee

--- a/mante.html
+++ b/mante.html
@@ -15,7 +15,7 @@
         .tab:hover{background-color: #14052b; color: #23f3ad}
         </style></head>
     <body><header>
-        <h1>every ma ante server name*</h1></header>
+        <h1>every ma ante server name*<br>every ma ante server name*</h1></header>
         <nav><a href="#">back to top</a></nav>
     <div class="main">
         <details id="notes"><summary><b>notes</b></summary>
