--- a/mante.html
+++ b/mante.html
@@ -6,8 +6,7 @@
         <title>server names</title><style>
         body{--back: hsl(0, 0%, 3%);
         --text: #f0f0f0;
-        --color: #5dcbfc;
-        --shadow: #202020}
+        --color: #5dcbfc}
         ::selection{background-color: #f6abb6}
         a::selection{background-color: var(--color)}
         .name{color: #f6abb6}
@@ -15,7 +14,7 @@
         .tab:hover{background-color: #14052b; color: #23f3ad}
         </style></head>
     <body><header>
-        <h1>Ájyo<br>Ájyo</h1></header>
+        <h1>every ma ante server name*</h1></header>
         <nav><a href="#">back to top</a></nav>
     <div class="main">
         <details id="notes"><summary><b>notes</b></summary>
