--- a/mante.html
+++ b/mante.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <title>server names</title><style>
+        <title>→ server names</title><style>
         body{--back: hsl(0, 0%, 3%);
         --text: #f0f0f0;
         --color: #5dcbfc}
