--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
             #statuscafe{margin: 8px}
 
             .pages{display: grid;}
-            .pages a{display:block; font-size: 2rem; 
+            .pages a{display:block; font-size: 2rem; height: fit-content;
                 border:bottom; padding: 8px 16px; text-decoration: none;
                 outline: solid 1px #00000000; outline-offset: -1px;}
             .pages div{background-color: var(--text); height: 1px; 
