TOO MANY LINES.

--- a/sitelog.html
+++ b/sitelog.html
@@ -10,8 +10,7 @@
         .entry{margin-bottom: 24px;}
         h2{font-family: 'Iosevka', monospace;}
         h2::before{content: "> "; color: #543500}
-        .entry p{margin-top: 8px; margin-left: 8px;
-        border-left: solid 1px #543500; padding-left: 16px}
+        .entry p{margin-top: 8px; margin-left: 24px}
         </style></head>
     <body><header>
         <h1>sitelog</h1></header>
