made button padding better

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 
             .pages{display: grid;}
             .pages a{display:block; font-size: 2rem; height: fit-content;
-                border:bottom; padding: 8px 16px; text-decoration: none;
+                border:bottom; padding: 8px 18px 8px 16px; text-decoration: none;
                 outline: solid 1px #00000000; outline-offset: -1px;}
             .pages div{background-color: var(--text); height: 1px; 
                 width: 50%; margin: -1px auto; z-index: -1;}
