--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
-        <title>nwipc</title><style>
+        <title>nowhere in particular</title><style>
             body{--back: #040404;
                 --text: #f0f0f0}
             a{font-size: min(15vw, 5rem);  font-weight: bold;
