--- a/sitelog.html
+++ b/sitelog.html
@@ -10,7 +10,7 @@
         .entry{margin-bottom: 24px;}
         h2{font-family: 'Iosevka', monospace;}
         h2::before{content: "> "; color: #543500}
-        .entry p{margin-top: 8px; margin-left: 24px}
+        .entry p{margin-top: 8px}
         </style></head>
     <body><header>
         <h1>sitelog</h1></header>
