added journal with new entry

--- a/sitelog.html
+++ b/sitelog.html
@@ -10,7 +10,8 @@
         .entry{margin-bottom: 24px;}
         h2{font-family: 'Iosevka', monospace;}
         h2::before{content: "> "; color: #543500}
-        .entry p{margin-top: 8px}
+        .entry p{margin: 4px 8px; border-left: dotted 1px var(--color); 
+            padding-left: 12px}
         </style></head>
     <body><header>
         <h1>sitelog</h1></header>
