--- a/misc/index.html
+++ b/misc/index.html
@@ -5,7 +5,7 @@
         <link href="mainstyle.css" rel="stylesheet" type="text/css" media="all">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>> misc</title><style>
-            
+            h1::before{content: "> "}
         </style></head>
     <body><header>
         <h1>misc</h1></header>
