--- a/misc/index.html
+++ b/misc/index.html
@@ -6,6 +6,7 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>> misc</title><style>
             h1::before{content: "> "}
+            h2{margin-top: 16px}
         </style></head>
     <body><header>
         <h1>misc</h1></header>
