--- a/misc/journal.html
+++ b/misc/journal.html
@@ -5,6 +5,7 @@
         <link href="mainstyle.css" rel="stylesheet" type="text/css" media="all">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>/ journal</title><style>
+            .entry{margin-bottom: 24px;}
             .entry p{margin: 4px 8px; border-left: dotted 1px #15c405;
             padding-left: 12px}
         </style></head>
