fixed some page links

--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -68,7 +68,7 @@
             <li><a href="other/nothing">unprobable blog</a>: the sole post in a blog i knew i wouldn't really keep posting on. so here it is.</li>
             <li><a href="other/hi">hi</a>: hi</li>
             <li><a href="other/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
-            <li><a href="other/fuleponhinep">fulepõhiné</a>: a half-done crappy mostly a priori conlang.</li>
+            <li><a href="other/fuleponhinep">fulepõhiné</a>: a half-done crappy mostly a priori conlang, mostly just css practice.</li>
         </ul>
     </details>
 
@@ -90,6 +90,8 @@
                 </p></div>
             <div class="image"><img style="max-width: 200px" src="images/nowhere5.gif">
                 <p>A 200x40 button that took a while to make but looks pleasing!</p></div>
+            <div class="image"><img src="images/nowhere6.gif">
+                <p>A redone version of the blue button to look like the very first button (!)</p></div>
         </details>
 
         <details id="dingus">
