--- a/misc/folder/other/difference.html
+++ b/misc/folder/other/difference.html
@@ -10,7 +10,7 @@
         </style></head>
     <body><header>
         <h1>about difference</h1></header>
-        <nav><a href="./home">back to misc</a></nav>
+        <nav><a style="text-decoration: solid 1px var(--text)" href="../index">back to folder</a></nav>
     <div class="main">
         <p>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
