--- a/misc/folder/other/fuleponhinep.html
+++ b/misc/folder/other/fuleponhinep.html
@@ -22,13 +22,14 @@
         border: solid 2px #202020; margin-bottom: -2px}
         details div.grid{display: grid; grid-template-columns: 50% 50%;
         gap: 16px}
+        a{color: #202020; text-decoration: #202020;}
         .grid h2, p{margin: 0}
         </style></head>
 
     <body>
         <div class="main">
             <h1 style="margin: 0">fulepõhiné /fu.leˌpõ.hiˈnɛ/</h1>
-        <p>a crappy first attempt at conlanging</p>
+        <p>a crappy first attempt at conlanging <a href="../index">back to folder</a></p>
         <h2>sounds</h2>
         </div><div class="wide">
         <table>
