--- a/misc/folder/other/fuleponhinep.html
+++ b/misc/folder/other/fuleponhinep.html
@@ -22,7 +22,7 @@
         border: solid 2px #202020; margin-bottom: -2px}
         details div.grid{display: grid; grid-template-columns: 50% 50%;
         gap: 16px}
-        a{color: #202020; text-decoration: solid #202020;}
+        a{color: #202020; text-decoration: underline}
         .grid h2, p{margin: 0}
         </style></head>
 
