fixed index 8 links

--- a/misc/folder/indexes/index8.html
+++ b/misc/folder/indexes/index8.html
@@ -90,13 +90,13 @@
     </div>
 
     <div class="pages">
-        <a href="bookmarks" class="bookmarks" title="(cool websites i've collected)">bookmarks</a>
-        <a href="bookshelf" class="bookshelf" title="(books i've read/am reading)">bookshelf</a><br>
-        <a href="doodles" class="doodles" title="(stuff i've drawn)">doodles</a>
-        <a href="blender" class="normal" title="(stuff made in blender)">blender</a>
-        <a href="misc" class="misc" title="(ellaneous)">misc</a><br>
-        <a href="buttons" class="buttons" title="(other folks' sites)">buttons</a>
-        <a href="sitelog" class="sitelog" title="(what's changed)">sitelog</a>
+        <a href="/website/bookmarks" class="bookmarks" title="(cool websites i've collected)">bookmarks</a>
+        <a href="/website/bookshelf" class="bookshelf" title="(books i've read/am reading)">bookshelf</a><br>
+        <a href="/website/doodles" class="doodles" title="(stuff i've drawn)">doodles</a>
+        <a href="/website/blender" class="normal" title="(stuff made in blender)">blender</a>
+        <a href="/website/misc" class="misc" title="(ellaneous)">misc</a><br>
+        <a href="/website/buttons" class="buttons" title="(other folks' sites)">buttons</a>
+        <a href="/website/sitelog" class="sitelog" title="(what's changed)">sitelog</a>
     </div>
 
 </body>
