--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../mainstyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>/ folder</title><style>
             summary{transition: all .5s cubic-bezier(.08,.82,.17,1)}
