--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -12,7 +12,7 @@
         </style></head>
     <body><header>
         <h1>folder</h1></header>
-        <nav><a href="index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav><a href="../index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
     <div class="main">
         <p>You open the folder to find... more folders. 
             And a sticky note saying that basically all the html pages use other fonts, so it might take
