added misc link to home page!

--- a/home.html
+++ b/home.html
@@ -78,6 +78,7 @@
             </div>
             <div class="divider"></div>
             <div class="pages">
+                <a class="misc" href="misc/"><b>→</b> misc</a>
                 <a class="sitelog" href="sitelog"><b>→</b> sitelog</a>
             </div>
             </div>
