--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
             #statuscafe-username a{display: none}
             #statuscafe{margin: 8px}
 
-            .pages{display: grid;}
+            .pages{display: grid; height: min-content}
             .pages a{display:block; font-size: 2rem; height: fit-content;
                 border:bottom; padding: 8px 18px 8px 16px; text-decoration: none;
                 outline: solid 1px #00000000; outline-offset: -1px;}
