fixed bikobatanari gif and changed mante webring colors

--- a/buttons/index.html
+++ b/buttons/index.html
@@ -26,6 +26,10 @@
             transition: all .125s linear; outline: solid 0px var(--back)}
         img:hover{outline: solid 4px var(--color)}
 
+        #mante:not(:hover){border-color: var(--color); color: var(--text);
+            border-radius: 0; box-shadow: 0px 0px var(--back)}
+        #mante:not(:hover) a{color: var(--text); text-decoration-color: var(--color);}
+
         </style></head>
     <body><header>
         <h1>buttons</h1></header>
@@ -54,7 +58,7 @@
             <a href="https://nyanseong.neocities.org/" class="button"><img width="88" height="31" src="https://nyanseong.neocities.org/img/buttons/nyanseong-wink.png" alt="nyanseong"></a>
             <a href="https://noodledesk.net/" class="button"><img src="noodlebutton.gif" alt="noodle desk"></a>
             <a href="https://lazybones.neocities.org/" class="button"><img src="https://lazybones.neocities.org/IMAGES/lazybonesicon4.png" alt="lazybones"></a>
-            <a href="https://www.bikobatanari.art/" class="button"><img src="https://www.bikobatanari.art/images/bikobatanari.gif" alt="bikobatanari"></a>
+            <a href="https://www.bikobatanari.art/" class="button"><img src="bikobatanari.gif" alt="bikobatanari"></a>
             <a href="https://status.cafe" class="button"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"></a>
         </div><br>
         <div id='mante'>
