--- a/buttons/index.html
+++ b/buttons/index.html
@@ -27,7 +27,8 @@
         img:hover{outline: solid 4px var(--color)}
 
         #mante:not(:hover){border-color: var(--color); color: var(--text);
-            border-radius: 0; box-shadow: 0px 0px var(--back)}
+            border-radius: 0; box-shadow: 0px 0px var(--back); background-color: var(--back);
+            transition: all .5s cubic-bezier(.08,.82,.17,1)}
         #mante:not(:hover) a{color: var(--text); text-decoration-color: var(--color);}
 
         </style></head>
