--- a/buttons/index.html
+++ b/buttons/index.html
@@ -31,6 +31,9 @@
             border-radius: 0; box-shadow: 0px 0px var(--back); background-color: var(--back)}
         #mante:not(:hover) a{color: var(--color); text-decoration-color: var(--color);}
 
+        .webring-prev a{content:'← previous'}
+        .webring-next a{content:'→ next'}
+
         </style></head>
     <body><header>
         <h1>buttons</h1></header>
