added buttons back to homepage

--- a/home.html
+++ b/home.html
@@ -79,6 +79,7 @@
             <div class="divider"></div>
             <div class="pages">
                 <a class="misc" href="misc/"><b>→</b> misc</a>
+                <a class="buttons" href="buttons/"><b>→</b> buttons</a>
                 <a class="sitelog" href="sitelog"><b>→</b> sitelog</a>
             </div>
             </div>
