--- a/buttons/index.html
+++ b/buttons/index.html
@@ -34,7 +34,7 @@
         </style></head>
     <body><header>
         <h1>buttons</h1></header>
-        <nav><a href="./home">home</a></nav>
+        <nav><a href="../home">home</a></nav>
     <div class="main">
         <p>This is the place where we put buttons to other ppl's websites, be they acquaintances or
             other neat websites we think are cool, found on status.cafe.<br>Our button is in the works
