added about page and other folder things

--- a/home.html
+++ b/home.html
@@ -33,7 +33,8 @@
             .pages div{background-color: var(--text); height: 1px; 
                 width: 50%; margin: -1px auto; z-index: -1;}
 
-            .about:hover, .doodles:hover{background-color: #e0e0e0; color: #202020}
+            .about:hover{background-color: #f0f0f0; color: #2b5cb1}
+            .doodles:hover{background-color: #e0e0e0; color: #202020}
             .bookmarks:hover{background-color: #0d0542; color: #ffb135; 
                 outline-color: #ffb135;}
             .blender:hover{background-color: #498cff10; color: var(--text);
@@ -78,6 +79,7 @@
             </div>
             <div class="divider"></div>
             <div class="pages">
+                <a class="about" href="about"><b>→</b> about</a>
                 <a class="misc" href="misc/"><b>→</b> misc</a>
                 <a class="buttons" href="buttons/"><b>→</b> buttons</a>
                 <a class="sitelog" href="sitelog"><b>→</b> sitelog</a>
