--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -101,6 +101,10 @@
                 <p>The first version, done digitally, probably GIMP.</p></div>
             <div class="image"><img style="background-color: var(--text); border-radius: 100%;" src="images/dingus2.png">
                 <p>A version changed to fit the light theme, now handdrawn and transparent, the white comes from the background (like a <a href="https://en.wikipedia.org/wiki/Daguerreotype">daguerreotype</a> kinda)</p></div>
+            <div class="image"><img style="background-color: var(--text); border-radius: 100%;" src="images/dingus3.png">
+                <p>Another version, this time with my crappy hair!</p></div>
+            <div class="image"><img style="background-color: var(--text)" src="images/dingusattempts.png">
+                <p>The attempts at drawing the above thing, trying to get each line right ughh</p></div>
             <div class="image"><img src="images/redlonely.png">
                 <p>An unused handdrawn image that was supposed to be used on my status.cafe but it doesn't... look particulalrly good.</p></div>
             <div class="image"><img src="images/guy.png">
