--- a/mante.html
+++ b/mante.html
@@ -23,18 +23,26 @@
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:</p>
                 <ul>
-                    <li><b>kulupu ko:</b> 134 changes</li>
+                    <li><b>kulupu ko:</b> 135 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>the motan:</b> 53 changes</li>
+                    <li><b>the motan:</b> 54 changes</li>
                     <li><b>kala Asi:</b> 16 changes</li>
                     <li><b>jan Seli:</b> 15 changes</li>
-                    <li><b>tabby:</b> 12 changes</li>
-                    <li><b>mu Temi:</b> 2 change</li>
+                    <li><b>tabby:</b> 13 changes</li>
+                    <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
                 <p>tan mute ante</p>
         </details>
-        <ul id="name list">
+        <h2>2023</h2><ul id="name list 2023">
+            <li>2/1:<b> autism land </b><span class="name">mu Temi</span></li><br>
+            <li>1/1:<b> happy 40th, 1984 </b><span class="name">the motan</span></li><br>
+        </ul><h2>2022</h2><ul id="name list 2022">
+            <li>31/12:<b> temi's mom's and earth's birthdays </b><span class="name">tabby</span></li><br>
+            <li>31/12:<b> temi's mom's birthday </b><span class="name">mu Temi</span></li><br>
+            <li>31/12:<b> aspen-misinfo-temi's mom birthday </b><span class="name">mu Temi</span></li><br>
+            <li>31/12:<b> aspen-misinfo-temi mom birthday </b><span class="name">mu Temi</span></li><br>
+            <li>30/12:<b> aspen-misinfo birthday </b><span class="name">kulupu ko</span></li><br>
             <li>19/12:<b> logobogo (place for eating worms) </b><span class="name">kulupu ko</span></li><br>
             <li>7/12:<b> How not to play Uno Chess </b><span class="name">the motan</span></li><br>
             <li>5/12:<b> <a href="https://youtu.be/vzkKs_b5css">How to play Uno Chess</a> </b><span class="name">the motan</span></li><br>
