--- a/mante.html
+++ b/mante.html
@@ -32,7 +32,7 @@
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
                 </ul>
-                <p>tan mute ante</p>
+                <p>mute ante li pali e lipu ni</p>
         </details>
         <h2>2023</h2><ul id="name list 2023">
             <li>2/1:<b> autism land </b><span class="name">mu Temi</span></li><br>
