added blender to home

--- a/home.html
+++ b/home.html
@@ -80,7 +80,9 @@
                 <a class="about" href="about"><b>→</b> about</a>
                 <a class="bookmarks" href="bookmarks"><b>→</b> bookmarks</a>
                 <div></div>
+                <a class="blender" href="blender"><b>→</b> blender</a>
                 <a class="misc" href="misc/"><b>→</b> misc</a>
+                <div></div>a
                 <a class="buttons" href="buttons/"><b>→</b> buttons</a>
                 <a class="sitelog" href="sitelog"><b>→</b> sitelog</a>
             </div>
