--- a/blender/index.html
+++ b/blender/index.html
@@ -15,7 +15,7 @@
         </style></head>
     <body><header>
         <h1>blender renders</h1></header>
-        <nav><a href="./home">home</a></nav>
+        <nav><a href="../home">home</a></nav>
     <div class="main">
         
         <p>Hi! These are (most) of the things i've done in blender over the last while.
