--- a/home.html
+++ b/home.html
@@ -40,7 +40,8 @@
             .blender:hover{background-color: #498cff10; color: var(--text);
                 outline-color: #498cff;}
             .words:hover{background-color: #efd9b3; color: #2B2008}
-            .buttons:hover{background-color: #b8cadf; color: #001a40}
+            .buttons:hover{background-color: #b8cadf; color: #001a40;
+                outline-color: #b8cadf;}
             .misc:hover{background-color: #15c40510; color: var(--text); 
                 outline-color: #15c405;}
             .sitelog:hover{background-color: #ffa90010; color: #ffa900; 
@@ -82,7 +83,7 @@
                 <div></div>
                 <a class="blender" href="blender"><b>→</b> blender</a>
                 <a class="misc" href="misc/"><b>→</b> misc</a>
-                <div></div>a
+                <div></div>
                 <a class="buttons" href="buttons/"><b>→</b> buttons</a>
                 <a class="sitelog" href="sitelog"><b>→</b> sitelog</a>
             </div>
