fixed some things

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,7 +13,7 @@
         </style></head>
     <body><header>
         <h1>a lot of bookmarks</h1></header>
-        <nav><a href="home">go back</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav><a href="home">home</a><div class="space"></div><a href="#">back to top</a></nav>
     <div class="main">
         <p class="start">These are a bunch of bookmarks i've collected with raindrop.io, automatically updating!<br>
         </p>
