--- a/buttons/index.html
+++ b/buttons/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
-        <title>🙚 buttons</title><style>
+        <title>→ buttons</title><style>
         @font-face {
             font-family: 'c059';
             font-weight: normal;
@@ -19,7 +19,6 @@
         --color: #0b458e;
         font-family: 'c059', serif;}
         h2::before{color: #0b458e}
-        h1::before, h2::before{content:'🙚 '}
         h1{margin-top: 16px}
 
         .button img{display: inline-block; width: min-content; margin: 4px;
