--- a/misc/index.html
+++ b/misc/index.html
@@ -10,7 +10,7 @@
         </style></head>
     <body><header>
         <h1>misc</h1></header>
-        <nav style='padding-top: 0'></nav>
+        <nav><a href="../home">home</a></nav>
     <div class="main">
         <p>You wander into the basement downstairs, and see a green door in front of you.
             You can barely make out the words "NO ENTRY" in thick lines, but it's been all
